// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IFFDataTrail doesnt_draw_hos_sus 1`] = `
<canvas
  data-snapshot-image="6d881b6b48faa7cc1e341e5fd05226b362a7f8d5bcae9a3ac4d07904c0d480adef0990f70d97c25bfe29ec3372172b3b0d88d389dcc728cd94e66daf7cee06e7"
/>
`;

exports[`IFFDataTrail draws_correctly 1`] = `
<canvas
  data-snapshot-image="7a0f05b95b13c2c1443461e72b45672d7a48324762216c14a8257576b7100d36e4a974a437be45660e2d7c7dae44c9882c4183d88b03151a603f3b65f50b5ad7"
/>
`;
